@@ -70,6 +70,8 @@
     <Compile Include="Methods\Arithmetic\AddMethod.cs" />
     <Compile Include="Methods\Arithmetic\ArithmeticsOperator.cs" />
     <Compile Include="Methods\Arithmetic\BinaryArithmeticMethod.cs" />
+    <Compile Include="Methods\Arithmetic\DivideMethod.cs" />
+    <Compile Include="Methods\Arithmetic\MultiplyMethod.cs" />
     <Compile Include="Methods\Arithmetic\SubtractMethod.cs" />
     <Compile Include="Methods\BaseMethod.cs" />
     <Compile Include="Methods\CloneMethod.cs" />
